# fulcra-context-mcp

./: .gitignore  ARCHITECTURE.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  test_metric_fetch.py
fulcra_mcp/: __init__.py  health_db.py  main.py  smart_fetch.py  test_runner.py
fulcra_mcp/tests/: __init__.py  conftest.py  test_integration.py  test_serialization.py
