[project]
name = "fulcra-context-mcp"
version = "0.1.3"
description = "Fulcra Context MCP Server"
license = "Apache-2.0"
authors = [
    {name = "Brandon Creighton", email = "brandon@fulcradynamics.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastmcp>=2.8.0",
    "fulcra-api>=0.1.27",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "structlog>=25.4.0",
]


[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "numpy>=1.24.0",  # For testing numpy serialization
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"



[project.scripts]
fulcra-context-mcp = "fulcra_mcp.main:main"
